--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1",
+    "mongoose": "^8.15.1",
     "multer": "1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
